Added Hero/Header Content

--- a/index.html
+++ b/index.html
@@ -7,5 +7,25 @@
     <link rel="stylesheet" href="style.css" />
     <title>Odin</title>
   </head>
-  <body></body>
+  <body>
+    <div class="hero-photo">
+      <div class="hero-text">
+        <h4 class="logo">Header Logo</h4>
+        <ul>
+          <li>Link One</li>
+          <li>Link Two</li>
+          <li>Link Three</li>
+        </ul>
+
+        <h3 class="hero-main-text">This Website is Awesome</h3>
+        <p class="hero-sub-text">
+          This website has some subtext that goes here under the main title.
+          It's a smaller font and the color is lower contrast
+        </p>
+        <button>Sign up</button>
+
+        <img src="#" alt="Placeholder" />
+      </div>
+    </div>
+  </body>
 </html>
