Finished Nav in StyleSheet

--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
   </head>
   <body>
     <div class="hero-photo">
-      <div class="hero-text">
+      <div class="container">
         <h4 class="logo">Header Logo</h4>
         <ul>
-          <li>Link One</li>
-          <li>Link Two</li>
-          <li>Link Three</li>
+          <li class="link-one">Link One</li>
+          <li class="link-two">Link Two</li>
+          <li class="link-three">Link Three</li>
         </ul>
-
-        <h3 class="hero-main-text">This Website is Awesome</h3>
-        <p class="hero-sub-text">
-          This website has some subtext that goes here under the main title.
-          It's a smaller font and the color is lower contrast
-        </p>
-        <button>Sign up</button>
-
-        <img src="#" alt="Placeholder" />
       </div>
+
+      <h3 class="hero-main-text">This Website is Awesome</h3>
+      <p class="hero-sub-text">
+        This website has some subtext that goes here under the main title. It's
+        a smaller font and the color is lower contrast
+      </p>
+      <button>Sign up</button>
+
+      <img src="#" alt="Placeholder" />
     </div>
   </body>
 </html>
