--- a/index.html
+++ b/index.html
@@ -12,20 +12,24 @@
       <div class="container">
         <h4 class="logo">Header Logo</h4>
         <ul>
-          <li class="link-one">Link One</li>
-          <li class="link-two">Link Two</li>
-          <li class="link-three">Link Three</li>
+          <li class="link-one">Header Link One</li>
+          <li class="link-two">Header Link Two</li>
+          <li class="link-three">Header Link Three</li>
         </ul>
       </div>
 
-      <h3 class="hero-main-text">This Website is Awesome</h3>
-      <p class="hero-sub-text">
-        This website has some subtext that goes here under the main title. It's
-        a smaller font and the color is lower contrast
-      </p>
-      <button>Sign up</button>
+      <div class="container-two">
+        <div class="small-container">
+          <h3 class="hero-main-text">This Website is Awesome</h3>
+          <p class="hero-sub-text">
+            This website has some subtext that goes here under the main title.
+            It's a smaller font and the color is lower contrast
+          </p>
+          <button>Sign up</button>
+        </div>
 
-      <img src="#" alt="Placeholder" />
+        <img src="images/placeholder.png" alt="Placeholder" />
+      </div>
     </div>
   </body>
 </html>
