--- a/index.html
+++ b/index.html
@@ -28,8 +28,13 @@
           <button>Sign up</button>
         </div>
 
-        <img src="images/placeholder.png" alt="Placeholder" />
+        <img src="#" alt="Placeholder" />
       </div>
     </div>
+
+    <main>
+      <h2>Some Random Information</h2>
+      <div class="box-container"></div>
+    </main>
   </body>
 </html>
